--- a/pytube/pytube.ipynb
+++ b/pytube/pytube.ipynb
@@ -25,7 +25,7 @@
    "source": [
     "## Install\n",
     "```bash\n",
-    "$ pip install pytube\n",
+    "$ python -m pip install pytubefix\n",
     "```"
    ]
   },
@@ -36,7 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "! pip install pytube"
+    "! python -m pip install pytubefix"
    ]
   },
   {
@@ -48,7 +48,7 @@
    },
    "outputs": [],
    "source": [
-    "from pytube import YouTube"
+    "from pytubefix import YouTube"
    ]
   },
   {
@@ -69,13 +69,11 @@
    },
    "outputs": [],
    "source": [
-    "# I AM\n",
-    "#URL='https://www.youtube.com/watch?v=6ZUIwj3FgUY'\n",
     "# Overwatch2 - perfect night\n",
-    "URL='https://www.youtube.com/watch?v=hLvWy2b857I'\n",
-    "# Unforgiven\n",
-    "#URL='https://www.youtube.com/watch?v=wIBZ7UcQmDU'\n",
-    "streams = YouTube(URL).streams\n",
+    "URL = 'https://youtu.be/hLvWy2b857I'\n",
+    "yt = YouTube(URL)\n",
+    "streams = yt.streams\n",
+    "\n",
     "for stream in streams:\n",
     "    print(stream)"
    ]
@@ -134,7 +132,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -148,7 +146,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
