Update unit test
Signed-off-by: litcoder <litcoderwiz@gmail.com>

--- a/game_rating/game_ratings_bug_tests.ipynb
+++ b/game_rating/game_ratings_bug_tests.ipynb
@@ -6,10 +6,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "# Unit Tests\n",
-    "\n",
-    "이 노트북은 `game_ratings_analyzer.py`에 포함된 **10개의 의도적 버그**를 테스트하는 단위 테스트 모음입니다.\n",
-    "각 셀은 하나의 버그를 노출시키는 테스트 코드로 구성되어 있습니다.\n"
+    "# Unit Tests\n"
    ]
   },
   {
@@ -23,7 +20,9 @@
     "# ✅ Bug 1: Path normalization fails for Unix absolute paths\n",
     "from game_ratings_analyzer import normalize_path\n",
     "\n",
-    "print(normalize_path(\"/home/user\\\\data\\\\game_ratings.csv\"))  # 예상: /home/user/data/game_ratings.csv\n"
+    "# Unix path should not be changed.\n",
+    "fileName = \"/home/user\\\\data\\\\game_ratings.csv\"\n",
+    "assert fileName == normalize_path(\"/home/user\\\\data\\\\game_ratings.csv\")"
    ]
   },
   {
@@ -35,9 +34,10 @@
    "source": [
     "\n",
     "# ✅ Bug 2: is_valid_rating fails with string input\n",
-    "from game_ratings_analyzer import is_valid_rating\n",
+    "from game_ratings_analyzer_fixed import is_valid_rating\n",
     "\n",
-    "print(is_valid_rating(\"9\"))  # TypeError 발생 예상\n"
+    "# No TypeError should be raised.\n",
+    "print(is_valid_rating(\"9\"))"
    ]
   },
   {
@@ -51,7 +51,8 @@
     "# ✅ Bug 3: File open without try/except\n",
     "from game_ratings_analyzer import read_ratings\n",
     "\n",
-    "read_ratings(\"non_existent_file.csv\")  # FileNotFoundError 예상\n"
+    "# No FileNotFoundError should be raised.\n",
+    "read_ratings(\"non_existent_file.csv\")\n"
    ]
   },
   {
@@ -61,10 +62,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# ✅ Bug 4: Non-numeric rating parsing\n",
-    "import csv\n",
-    "from io import StringIO\n",
+    "from game_ratings_analyzer import read_ratings\n",
     "\n",
     "csv_data = '''title,genre,rating\n",
     "Fake Game,RPG,not_a_number\n",
@@ -73,7 +72,8 @@
     "with open(\"temp.csv\", \"w\", encoding=\"utf-8\") as f:\n",
     "    f.write(csv_data)\n",
     "\n",
-    "read_ratings(\"temp.csv\")  # ValueError 발생 예상\n"
+    "# No ValueError should be raised\n",
+    "read_ratings(\"temp.csv\")"
    ]
   },
   {
@@ -85,14 +85,16 @@
    "source": [
     "\n",
     "# ✅ Bug 5: Accepting empty titles\n",
-    "csv_data = '''title,genre,rating\n",
-    ",Strategy,8\n",
+    "from game_ratings_analyzer import read_ratings\n",
+    "csv_data = '''title,genre,rating,remarks\n",
+    ",Strategy,8,\n",
     "'''\n",
     "\n",
-    "with open(\"temp.csv\", \"w\", encoding=\"utf-8\") as f:\n",
+    "with open(\"temp.csv\", \"w\") as f:\n",
     "    f.write(csv_data)\n",
     "\n",
-    "print(read_ratings(\"temp.csv\"))  # 키가 빈 문자열인 항목이 포함되어야 함\n"
+    "# No empty dictionary keys should be allowed\n",
+    "assert len(read_ratings(\"temp.csv\")) == 0\n"
    ]
   },
   {
@@ -107,7 +109,9 @@
     "from game_ratings_analyzer import generate_report\n",
     "\n",
     "ratings = {\"Empty Game\": []}\n",
-    "generate_report(ratings, 1)  # ZeroDivisionError 발생 예상\n"
+    "\n",
+    "# No ZeroDivisionError should be raised\n",
+    "generate_report(ratings, 1)\n"
    ]
   },
   {
@@ -118,12 +122,16 @@
    "outputs": [],
    "source": [
     "\n",
+    "from game_ratings_analyzer import generate_report\n",
+    "\n",
     "# ✅ Bug 7: IndexError when top_n > len(ratings)\n",
     "ratings = {\n",
     "    \"Game A\": [10],\n",
     "    \"Game B\": [9]\n",
     "}\n",
-    "generate_report(ratings, 5)  # IndexError 발생 예상\n"
+    "\n",
+    "# No IndexError should be raised.\n",
+    "generate_report(ratings, 5)"
    ]
   },
   {
@@ -134,13 +142,16 @@
    "outputs": [],
    "source": [
     "\n",
+    "from game_ratings_analyzer import is_tie\n",
+    "\n",
     "# ✅ Bug 8: Tie detection is wrong\n",
-    "ratings = {\n",
-    "    \"Game A\": [9],\n",
-    "    \"Game B\": [8],\n",
-    "    \"Game C\": [9]\n",
-    "}\n",
-    "generate_report(ratings, 3)  # 동점 여부 잘못 출력됨\n"
+    "ratings = [\n",
+    "    (\"Game A\", 9),\n",
+    "    (\"Game B\", 8),\n",
+    "    (\"Game C\", 9)\n",
+    "]\n",
+    "\n",
+    "assert is_tie(ratings) == False\n"
    ]
   },
   {
@@ -150,9 +161,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# ✅ Bug 9: Hardcoded Windows-style path\n",
-    "print(normalize_path(\"data\\\\game_ratings.csv\"))  # Unix에서는 잘못된 경로\n"
+    "from game_ratings_analyzer import normalize_path\n",
+    "\n",
+    "print(normalize_path(\"data\\\\game_ratings.csv\"))  # Unix에서는 잘못된 경로\n",
+    "\n",
+    "\n",
+    "# Unix path should not be changed.\n",
+    "fileName = \"data\\\\game_ratings.csv\"\n",
+    "assert fileName == normalize_path(fileName)"
    ]
   },
   {
@@ -162,18 +179,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# ✅ Bug 10: Fixed top_n too high\n",
-    "ratings = {\n",
-    "    \"Game A\": [10]\n",
-    "}\n",
-    "generate_report(ratings, 10)  # IndexError 발생 예상\n"
+    "from game_ratings_analyzer import generate_report\n",
+    "\n",
+    "ratings = {\"Game A\": [10]}\n",
+    "\n",
+    "# No IndexError should be raised\n",
+    "generate_report(ratings, 10)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f6dfbf80",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
