Fix wrong import
Signed-off-by: litcoder <litcoderwiz@gmail.com>

--- a/game_rating/game_ratings_bug_tests.ipynb
+++ b/game_rating/game_ratings_bug_tests.ipynb
@@ -34,7 +34,7 @@
    "source": [
     "\n",
     "# ✅ Bug 2: is_valid_rating fails with string input\n",
-    "from game_ratings_analyzer_fixed import is_valid_rating\n",
+    "from game_ratings_analyzer import is_valid_rating\n",
     "\n",
     "# No TypeError should be raised.\n",
     "print(is_valid_rating(\"9\"))"
@@ -187,14 +187,6 @@
     "# No IndexError should be raised\n",
     "generate_report(ratings, 10)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f6dfbf80",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
