Remove utf-8 encoding for more hidden bugs
Signed-off-by: litcoder <litcoderwiz@gmail.com>

--- a/game_rating/game_ratings_bug_tests.ipynb
+++ b/game_rating/game_ratings_bug_tests.ipynb
@@ -65,11 +65,11 @@
     "# ✅ Bug 4: Non-numeric rating parsing\n",
     "from game_ratings_analyzer import read_ratings\n",
     "\n",
-    "csv_data = '''title,genre,rating\n",
-    "Fake Game,RPG,not_a_number\n",
+    "csv_data = '''title,genre,rating,remarks\n",
+    "Fake Game,RPG,not_a_number,\n",
     "'''\n",
     "\n",
-    "with open(\"temp.csv\", \"w\", encoding=\"utf-8\") as f:\n",
+    "with open(\"temp.csv\", \"w\") as f:\n",
     "    f.write(csv_data)\n",
     "\n",
     "# No ValueError should be raised\n",
@@ -164,7 +164,7 @@
     "# ✅ Bug 9: Hardcoded Windows-style path\n",
     "from game_ratings_analyzer import normalize_path\n",
     "\n",
-    "print(normalize_path(\"data\\\\game_ratings.csv\"))  # Unix에서는 잘못된 경로\n",
+    "print(normalize_path(\"data\\\\game_ratings.csv\"))\n",
     "\n",
     "\n",
     "# Unix path should not be changed.\n",
